# traildb

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  compile  configure.ac  cursor.txt  test-driver.py  test-driver.sh  test.tdb  traildb.pc.in  wscript
doc/: HOWTO-ENRON.md  README-FUNNELDB.md  mkdocs.yml  update_docs
doc/docs/: api.md  getting_started.md  index.md  technical_overview.md  tutorial.md
doc/docs/extra_css/: multilang.css  traildb.css
doc/docs/extra_javascript/: moneyball.js  multilang.js  traildb.js
doc/mkdocs/: mkdocs.yml
doc/mkdocs/docs/: api.md  apidoc.md  index.md
doc/mkdocs/docs/extra_css/: traildb.css
doc/sphinx/: Makefile  make.bat
doc/sphinx/source/: apidoc.rst  conf.py  index.rst  overview.rst
dsrc/: TrailDB.d  breadcrumbs.di  examples.d  test.d
encoder/: breadcrumbs.c  breadcrumbs.h  breadcrumbs.py  breadcrumbs_decoder.h  breadcrumbs_encoder.c  breadcrumbs_encoder.h  compile  ddb_bits.h  decode_blob.py  encode_lexicon.c  huffman.c  huffman.h  lexicon.c  lexicon_decode.c  lexicon_encode.c  lexicon_encode.h  make_blob.py  test  test.py  trail.c  trail_decode.c  trail_encode.c  trail_encode.h  trail_encode_model.c  util.c  util.h
examples/: fdb-iter.c  tutorial_simple_traildb.c  tutorial_wikipedia_sessions.c
lib/d/: TrailDB.d  compile  test.d  traildb.di  traildbc.di
lib/haskell/: README.md  stack.yaml  traildb.cabal
lib/haskell/System/: TrailDB.hs
lib/haskell/System/TrailDB/: Internal.hs
lib/lua/: traildb.lua
lib/python/: setup.py
lib/python/traildb/: __init__.py  __main__.py  decode_blob.py  funneldb.py  traildb.py
src/: arena.c  arena.h  breadcrumbs.c  breadcrumbs.h  breadcrumbs_decoder.h  breadcrumbs_encoder.c  breadcrumbs_encoder.h  ddb_profile.h  ddb_queue.c  decode.c  decode.h  encode.c  encode.h  hex.h  hex_decode.h  hex_encode.h  huffman.c  huffman.h  judy_128_map.c  judy_128_map.h  judy_str_map.c  judy_str_map.h  lexicon_decode.c  tdb.c  tdb_bits.h  tdb_cons.c  tdb_cons_package.c  tdb_cookie.c  tdb_decode.c  tdb_encode.c  tdb_encode_model.c  tdb_encode_model.h  tdb_error.h  tdb_funnel.c  tdb_funnel.h  tdb_huffman.c  tdb_huffman.h  tdb_internal.h  tdb_io.h  tdb_iter.c  (+22 more)
src/dsfmt/: dSFMT.c
src/pqueue/: LICENSE  README.md  pqueue.c  pqueue.h
src/sort/: LICENSE.md  sort.h  sort_common.h
src/xxhash/: xxhash.c
tdb/: main.c  op_dump.c  op_make.c  tdbcli.h
tdbcli/: filter.c  main.c  op_dump.c  op_index.c  op_make.c  op_merge.c  tdb_index.c  tdb_index.h  tdbcli.h  thread_util.c  thread_util.h
test/: test.py  test.sh  test_filters.py
testing/: README.md  coverage.py  test.py
testing/c-tests/: basic_append.c  basic_cursor.c  basic_lexicon.c  basic_versioning.c  bit_operations.c  cookie_raw_cookie_hex_should_be_identity.c  dontneed_crash_bug.c  empty_tdb_cons.c  event_filter_large.c  event_filter_simple.c  field_names.c  gen-makefile-am.sh  get_item.c  get_trail_id.c  init_close_crash_bug.c  invalid_field_names.c  invalid_fields.c  item_encoding.c  judy_128_map_iter_test.c  judy_128_map_test.c  judy_str_map_test.c  off_by_one_encoding_bug.c  open_close_memory_leaks.c  opt_only_diff_items.c  out_of_memory.c  overflow.c  really_lots_of_fields.c  smoke_test.c  tdb_cons_setopt.c  tdb_test.h  uuid_encoding.c  uuid_ordering.c  what_you_write_you_get_back.c  wide_timestamps.c  willneed_crash_bug.c  zero_fields.c
testing/c-tests-large/: large_lexicon.c
testing/support/: test.py
tests/: README.md  coverage.py
tests/c-tests/: basic_append.c  basic_cursor.c  basic_lexicon.c  basic_versioning.c  bit_operations.c  dsfmt_sanity_test.c  empty_tdb_cons.c  event_filter_get_item.c  event_filter_get_time_range.c  event_filter_large.c  event_filter_simple.c  event_filter_trail_opt.c  field_names.c  free_test.c  get_item.c  get_trail_id.c  invalid_fields.c  judy_128_map_iter_test.c  judy_128_map_test.c  judy_str_map_test.c  multi_cursor.c  off_by_one_encoding_bug.c  open_close_memory_leaks.c  opt_event_filter.c  opt_only_diff_items.c  out_of_memory.c  really_lots_of_fields.c  smoke_test.c  stable_sort.c  tdb_cons_setopt.c  tdb_test.h  time_range_filter_simple.c  uuid_encoding.c  uuid_ordering.c  what_you_write_you_get_back.c  wide_timestamps.c  willneed_crash_bug.c  zero_fields.c
tests/c-tests-large/: large_lexicon.c
tests/support/: OSX_IGNORE.txt  test.py
tests/tdbcli/: test_tdbcli.py
trail-extractd/: compile  extractd.c  extractd.h  grouper.c  trail-extractd.c  trail-extractd.h
trail-index/: compile  cookie-index.c  trail-index.c
trail-merge/: extractd.c  extractd.h  grouper.c  merge.c
trail-mix/: compile  ddb_structs.h  generate-ops.sh  generate_ops.sh  input.c  mix-max  mix.c  mix.h  ops.h  output.c  trail-mix-max  trail-mix.c  trail-mix.h
trail-mix/ops/: count.c  equals.c  extract.c  length.c  limit.c  max.c  min.c  not.c  open.c  q.c
