name:                traildb
version:             0.1.0.0
synopsis:            Traildb bindings for Haskell
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikko.juola@adroll.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     System.TrailDB
  build-depends:       base >=4.8 && <5.0
                      ,bytestring
                      ,text
                      ,time
                      ,transformers
  extra-libraries:     traildb
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

