name:                traildb
version:             0.1.0.0
synopsis:            TrailDB bindings for Haskell
description:         Check out README.md for information on these bindings.
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikko.juola@adroll.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10

flag use-ioref
  default:             False
  description:         Use `IORef` instead of `MVar` as
                       the container for `Tdb`. Can improve performance (very
                       slightly) but you lose thread safety.

library
  exposed-modules:     System.TrailDB
                       System.TrailDB.Internal
  build-depends:       base >=4.6 && <5.0
                      ,bytestring
                      ,directory
                      ,lens
                      ,exceptions
                      ,primitive
                      ,text
                      ,time
                      ,transformers
                      ,unix
                      ,vector
  extra-libraries:     traildb, Judy, discodb, cmph
  ghc-options:         -Wall -fno-warn-name-shadowing -O2
  default-language:    Haskell2010

  if flag(use-ioref)
    cpp-options:       -DUSE_IOREF

